[package]
name = "rustcracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

hex = "0.4.3"
sha1 = "0.10.5"
argparse = "0.2.2"
io = "0.0.2"
clap = { version = "4.0", features = ["derive"] }
md-5 = "0.10.5"
sha2 = "0.10"
cfonts = "1.1.0"
